2010-08-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Lay foundation for selective compilation of debugging code.

	* src/debug.h: New file...
	* src/sysroot.cpp: Include it.
	(pkgXmlDocument::LoadSystemMap): Make debugging output conditional...
	[DEBUGLEVEL & DEBUG_TRACE_INIT]: ...on this new debugging state.

2010-08-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* src/pkgkeys.h: Typo in comment: file was previously identified as
	pkgkeys.c; corrected.

2010-08-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Improve diagnostics for invalid references to non-release XML nodes.

	* src/pkgkeys.h (value_unknown): New global string; declare it.
	* src/pkgkeys.c (value_unknown): Implement it.

	* src/pkgname.cpp (pkgArchiveName): Identify XML element type when
	diagnosing references to elements of types other than release; use...
	(value_unknown): ...this, as appropriate.

2010-08-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Guard against a potential buffer overrun.

	* src/pkgreqs.cpp (pkgSpecs::SetProperty): Allocate an additional
	byte to accommodate an extra field separator, when inserting a new
	data value into a previously empty field.

2010-07-27  Cesar Strauss  <cestrauss@gmail.com>

	Handle the GNU long name tar header format.

	* src/pkgproc.h (TAR_ENTITY_TYPE_GNU_LONGNAME): New manifest constant;
	define it.
	(pkgTarArchiveProcessor::EntityDataAsString): New protected method;
	declare and...
	* src/tarproc.cpp: ...implement it.
	(pkgTarArchiveProcessor::Process): Before building the entry pathname,
	check for a GNU long name type header; when found, read pathname from
	the entry data area, before fetching the following header, from which
	to retrieve the associated entity data.

2010-06-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around an autoconf bug (reported by Stefano Sabatini).

	* Makefile.in (VPATH): Use @top_srcdir@ instead of ${srcdir}; current